# clines

./: .gitignore  Cargo.toml  README.md
src/: display.rs  lib.rs  main.rs  nest.rs  pad.rs  rom.rs  tui.rs
src/cpu/: bus.rs
src/nes/: cpu.rs  mod.rs  pad.rs  rom.rs
src/nes/cpu/: bus.rs  instruction.rs  mod.rs  opecodes.rs  registers.rs
src/nes/ppu/: attr_table.rs  bus.rs  context.rs  mod.rs  name_table.rs  pallete.rs  registers.rs  renderer.rs  sprite.rs  tile.rs
src/nes/ppu/table/: mod.rs  name_table.rs
src/ppu/: bus.rs  mod.rs  registers.rs  sprite.rs
src/ppu/table/: attr_table.rs  mirroring.rs  mod.rs  name_table.rs
src/ui/: gui.rs  mod.rs  tui.rs
