[package]
name = "clines"
version = "0.1.0"
description = "A CLI NES(Famicom) Emulator"
authors = ["watcol <potfman@gmail.com>"]
repository = "https://github.com/watcol/clines"
keywords = ["emulator", "famicom", "nes", "nes-emulator", "rust", "cli", "tui"]
categories = ["command-line-utilities", "emulators"]
license = "MIT"
readme = "README.md"
edition = "2018"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs",
]

[dependencies]
anyhow = "1.0"
fmtlog = "0.1"
log = "0.4"
image = "0.23"
crossterm = "0.19"
device_query = "0.2"
minifb = "0.19"
